--- a/site/index.html
+++ b/site/index.html
@@ -7,21 +7,19 @@
     <title>Testing</title>
 </head>
 <body>
-    <div>Dear all,
-        <span>I took this really cool course
-        </span></div>
-        <span>on Coursera.org. I think it's
-        my favorite course I've EVER taken!
-        Here is the URL for it:
-        </span>
-        <a>HTML, CSS and JS for Web Developers</a>
-        <div>
-        Does anyone know how I can give this course 6
-        out of 5 stars?
-        </div>
-        <div>
-        Thank you,
-        -Yaakov.... I mean a random student! Definitely not Yaakov.
-        </div>
+   <div>
+       <ul>
+           <li>&gt;First One</li>
+           <li>
+               Second One:
+               <ul>
+                   <li>Second First</li>
+                   <li>Second Second</li>
+               </ul>
+           </li>
+           <li>Third&amp;</li>
+           <li><a href="https://jsfiddle.net/" target="_blank">&lt;Fourth</a></li>
+        </ul>
+   </div>
 </body>
 </html>
